# nix-playground

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
nix_playground/: build.py  checkout.py  clean.py  constants.py  main.py  utils.py
src/nix_playground/: checkout.py  main.py
tests/: test_build.py  test_checkout.py
